--- a/assets/css/controls/input-custom.scss
+++ b/assets/css/controls/input-custom.scss
@@ -4,7 +4,7 @@
 
 .input-custom{
     width: 548px;
-    height: 60px;
+    height: 50px;
     position: relative;
     transition: all 0.5 ease-in;
     &.disabled{
@@ -43,6 +43,12 @@
                 border: 1px solid var(--error);
             }
         }
+    }
+    .password-icon{
+        cursor: pointer;
+        position: absolute;
+        bottom: 9px;
+        right: 16px;
     }
 }
 
